--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.15.8
+  shared_preferences: ^2.3.2
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
