--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   connectivity_plus: ^6.0.5
   path: ^1.8.3
   pie_chart: ^5.4.0
+  share_plus: ^10.0.0
 
   firebase_core: ^2.30.0
   firebase_auth: ^4.17.8
